fix spelling mistake, format code and align bio text left on phone

--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -1,98 +1,99 @@
-@media screen and (max-width: 1080px){
-    header{
-        padding: 0;
-    }
-    header .right-header{
-        padding: 0rem !important;
-    }
+@media screen and (max-width: 1080px) {
+	header {
+		padding: 0;
+	}
+	header .right-header {
+		padding: 0rem !important;
+	}
 
-    .header-content{
-        grid-template-columns: 1fr;
-        padding-bottom: 6rem;
-    }
+	.header-content {
+		grid-template-columns: 1fr;
+		padding-bottom: 6rem;
+	}
 
-    .left-header{
-        .h-shape{
-            display: none;
-        }
-    }
+	.left-header {
+		.h-shape {
+			display: none;
+		}
+	}
 
-    .right-header{
-        grid-row: 1;
-        width: 90%;
-        margin: 0 auto;
-        padding-right: 0 !important;
-        .name{
-            font-size: 2.5rem !important;
-        }
-        .icons{
-            justify-content: center !important;
-            align-items: center;
-            .icon{
-                margin: 0, 0;
-            }
-        }
-    }
+	.right-header {
+		grid-row: 1;
+		width: 90%;
+		margin: 0 auto;
+		padding-right: 0 !important;
+		.name {
+			font-size: 2.5rem !important;
+		}
+		.icons {
+			justify-content: center !important;
+			align-items: center;
+			.icon {
+				margin: 0, 0;
+			}
+		}
+	}
 
-    .header-content .left-header .image{
-        margin: 0 auto;
-        width: 90%;
-    }
+	.header-content .left-header .image {
+		margin: 0 auto;
+		width: 90%;
+	}
 
-    .about-container{
-        align-items: center;
-        text-align: center;
-        grid-template-columns: 1fr;
-        .left-about{
-            padding-right: 0;
-            p{
-                padding-left: 0;
-            }
-        }
-        .image{
-            margin-left: 0rem;
-        }
-    }
+	.about-container {
+		align-items: center;
+		text-align: center;
+		grid-template-columns: 1fr;
+		.left-about {
+			padding-right: 0;
+			p {
+				padding-left: 0;
+				text-align: left;
+			}
+		}
+		.image {
+			margin-left: 0rem;
+		}
+	}
 
-    .portfolios{
-        grid-template-columns: 1fr;
-        padding-bottom: 6rem;
-    }
+	.portfolios {
+		grid-template-columns: 1fr;
+		padding-bottom: 6rem;
+	}
 
-    .blogs{
-        grid-template-columns: 1fr;
-        padding-bottom: 6rem;
-    }
+	.blogs {
+		grid-template-columns: 1fr;
+		padding-bottom: 6rem;
+	}
 
-    .main-title{
-        h2{
-            font-size: 2rem !important;
-            span{
-                font-size: 2rem !important;
-            }
-        }
-    }
+	.main-title {
+		h2 {
+			font-size: 2rem !important;
+			span {
+				font-size: 2rem !important;
+			}
+		}
+	}
 
-    .section{
-        padding: 2rem 2.5rem !important
-    }
+	.section {
+		padding: 2rem 2.5rem !important;
+	}
 
-    .theme-btn{
-        width: 50px;
-        height: 50px;
-    }
+	.theme-btn {
+		width: 50px;
+		height: 50px;
+	}
 
-    .controls{
-        top: auto;
-        bottom: 0;
-        flex-direction: row;
-        justify-content: center;
-        left: 50%;
-        transform: translateX(-50%);
-        width: 100%;
-        background-color: var(--color-grey-5);
-        .control{
-            margin: 1rem .3rem;
-        }
-    }
+	.controls {
+		top: auto;
+		bottom: 0;
+		flex-direction: row;
+		justify-content: center;
+		left: 50%;
+		transform: translateX(-50%);
+		width: 100%;
+		background-color: var(--color-grey-5);
+		.control {
+			margin: 1rem 0.3rem;
+		}
+	}
 }
